# Time-Series-Analysis

./: CMakeLists.txt  README.md
include/: anomaly_detection.hpp  forecasting.hpp  pattern_recognition.hpp  timeseries.hpp  utils.hpp
main/: main.cpp
src/: anomaly_detection.cpp  forecasting.cpp  pattern_recognition.cpp  timeseries.cpp  utils.cpp
